Removed height and width of first question popup to fix jumping at hover

--- a/e_metrobus/static/sass/_dashboard.scss
+++ b/e_metrobus/static/sass/_dashboard.scss
@@ -46,8 +46,6 @@
     }
     button {
       color: $white;
-      height: 1rem;
-      width: 1rem !important;
     }
     button:hover {
       color: $white;
